--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,9 @@
       "es2020",
       "dom"
     ],
+    "strictPropertyInitialization": false,
     "paths": {
-      "primeng/*": ["node_modules/primeng-lts/*"]
+
   }
   },
   "angularCompilerOptions": {
