--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@ant-design/icons-angular": "^14.1.0",
     "@kolkov/ngx-dadata": "^1.0.3",
+    "angular8-yandex-maps": "^14.0.4",
     "ng-image-slider": "^6.1.0",
     "ng-zorro-antd": "^14.1.1",
     "rxjs": "~7.5.0",
