--- a/angular.json
+++ b/angular.json
@@ -102,7 +102,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ng-zorro-antd/ng-zorro-antd.less"
             ],
             "scripts": []
           }
