--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@kolkov/ngx-dadata": "^1.0.3",
     "angular8-yandex-maps": "^14.0.4",
     "http-server": "^14.1.1",
+    "inputmask": "^5.0.7",
     "ng-image-slider": "^6.1.0",
     "ng-zorro-antd": "^14.1.1",
     "rxjs": "~7.5.0",
@@ -34,6 +35,7 @@
     "@angular-devkit/build-angular": "^14.2.9",
     "@angular/cli": "~14.2.9",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/inputmask": "^5.0.3",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
